--- a/_sass/_landing.scss
+++ b/_sass/_landing.scss
@@ -12,7 +12,7 @@ section {
 }
 
 .dark-section {
-    background-color: #2c338a;
+    background-color: $gray-200;
     hr {
         border-color: $white;
     }
