--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a class="navbar-brand" href="{{ site.baseurl }}">
+    <a class="navbar-brand" href="{{ site.baseurl }}/modules/week-11/overview">
         <div class="navbar-brand">
             <div class="">
                 {{ site.data.course.title-short }}
