--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -59,7 +59,7 @@
     </div>
 
 
-    <a class="navbar-brand" href="{{ site.baseurl }}">
+    <a class="navbar-brand" href="{{ site.baseurl }}/modules/week-11/overview">
         <img src="{{ site.baseurl }}/img/MART_LOGO_SMALL.png" alt="{{ site.title }}" class="nav_image d-inline-block align-top" />
     </a>
 
